fixed universal nav on IE7 from disappearing; fixed buttons on IE7 & fixed the close button icon/height problem on ie8 (& 7) again.

--- a/src/packages/common/css/_components/_navbar.scss
+++ b/src/packages/common/css/_components/_navbar.scss
@@ -328,6 +328,10 @@
     -webkit-font-smoothing: antialiased;
     // overflow: hidden;
   }
+
+  .lt-ie8 & {
+    height:26px;
+  }
 }
 
 .nav-primary {
